--- a/style.css
+++ b/style.css
@@ -15,11 +15,20 @@ body {
   height: 100%;
   font-size: 0.9vw;
   position: fixed;
-  text-align: center;
+  text-align: left;
   white-space: nowrap;
 }
 
-#Gateways, div#table_div tr:nth-child(even){background-color: #f2f2f2;}
+.right {
+    text-align: right;
+}
+
+div#table_div tr:nth-child(even) {
+    background-color: #d7d7d7;
+}
+div#table_div tr:nth-child(odd) {
+    background-color: #fdfdfd;
+}
 
 div#watermark {
     position: fixed;
